# Vegetabian_calendar

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hts/vegetabiancalendar/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Dhammapada.json  SolarEvent.json  VegetabianNote.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  vegetabiancalendar.cpp
app/src/main/java/com/hts/vegetabiancalendar/: MainActivity.kt  Note.txt
app/src/main/java/com/hts/vegetabiancalendar/config/: Fonts.kt
app/src/main/java/com/hts/vegetabiancalendar/factory/: MyViewModelFactory.kt
app/src/main/java/com/hts/vegetabiancalendar/model/: BodhisattvaDay.kt  EventDay.kt  ModelDhammapada.kt  MyDay.kt  MyLunarDate.kt  MyReason.kt
app/src/main/java/com/hts/vegetabiancalendar/navigator/: MyNavigator.kt
app/src/main/java/com/hts/vegetabiancalendar/route/: MyRoute.kt
app/src/main/java/com/hts/vegetabiancalendar/service/: AlarmService.kt  CalendarService.kt  MyNotificationService.kt  NotificationReceiver.kt  VegetabianDayService.kt
app/src/main/java/com/hts/vegetabiancalendar/ui/components/: AppBar.kt  DhammapadaList.kt
app/src/main/java/com/hts/vegetabiancalendar/util/: ConvertUtil.kt  MyConstant.kt  MyExtension.kt  SearchUtil.kt
app/src/main/java/com/hts/vegetabiancalendar/view_model/: MyViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/hts/vegetabiancalendar/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
